@@ -98,6 +98,7 @@ Pod::Elemental::PerlMunger = 0.200001
 Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::MakeMaker::Fallback = 0.008
 Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
+Dist::Zilla::Plugin::ModuleBuildTiny::Fallback = 0.005
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
 
@@ -107,6 +108,7 @@ Dist::Zilla::Plugin::GitHub::Update = 0
 Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::MakeMaker::Fallback = 0.008
 Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
+Dist::Zilla::Plugin::ModuleBuildTiny::Fallback = 0.005
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
 Config::Identity::GitHub = 0
