@@ -7,6 +7,8 @@ Revision history for {{$dist->name}}
             surgical_podweaver option
           - include placeholder for keyword declarations in minted modules
           - xt/ tests are now once again run after t/
+          - engage maximum fallbackiness!  default installers now
+            [ModuleBuildTiny::Fallback], [MakeMaker::Fallback]
 
 0.064     2014-05-21 16:56:30Z
           - one more .latest symlink fix
